# UndiscoveredWorlds

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.env  app_dialogs.hpp  app_environment.cpp  app_environment.hpp  app_state.hpp  app_windows.cpp  app_windows.hpp  appearance_settings.cpp  appearance_settings.hpp  climate_ocean.cpp  climate_validation.cpp  create_world_screen.cpp  create_world_screen.hpp  cuda_renderers.cu  cuda_renderers.hpp  cuda_renderers_stub.cpp  fastlem_mountains.cpp  fastlem_mountains.hpp  functions.hpp  generation_tuning.hpp  globalclimate.cpp  globalterrain.cpp  imgui.ini  main.cpp  map_appearance.cpp  map_appearance.hpp  map_imports.cpp  map_imports.hpp  misc.cpp  physical_layers.cpp  physical_layers.hpp  planet.cpp  planet.hpp  plate_tectonics_adapter.cpp  region.hpp  regionalmap.cpp  (+10 more)
extra/: climate.xlsx  dudas.txt  profiling.xlsx  seed.txt
extra/appearance/: realistic.uws  salt_pans_red.uws
vcpkg-ports/imguifiledialog/: portfile.cmake  vcpkg.json
